--- a/Application/src/main/res/layout/fragment_tyotehtavat.xml
+++ b/Application/src/main/res/layout/fragment_tyotehtavat.xml
@@ -8,7 +8,7 @@
     android:rowCount="1"
     android:useDefaultMargins="true">
 
-    <ExpandableListView
+    <ListView
         android:layout_width="300dp"
         android:layout_height="match_parent"
         android:id="@+id/tyotehtavat"
