--- a/Application/src/main/res/layout/explist_sisalto.xml
+++ b/Application/src/main/res/layout/explist_sisalto.xml
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        style="@style/tyolista_sisalto"
         android:id="@+id/tehtava" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        style="@style/tyolista_sisalto"
         android:id="@+id/aloitus" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        style="@style/tyolista_sisalto"
         android:id="@+id/deadline" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        style="@style/tyolista_sisalto"
         android:id="@+id/yhteyshenkilo" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        style="@style/tyolista_sisalto"
         android:id="@+id/muuta" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        style="@style/tyolista_sisalto"
         android:id="@+id/osoite" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        style="@style/tyolista_sisalto"
         android:id="@+id/ohj_piir_linkki" />
 </LinearLayout>
