--- a/Application/src/main/res/layout/activity_piirustukset_ohjeet.xml
+++ b/Application/src/main/res/layout/activity_piirustukset_ohjeet.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/piirustukset_ohjeet_main_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -6,11 +7,67 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#6699FF"
     >
-    <FrameLayout
-        android:id="@+id/fragment_test"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/piirustukset_ohjeet_main_linear_layout"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingRight="0dp"
+        android:paddingLeft="0dp"
+        android:background="#6699FF">
 
-        </FrameLayout>
+        <LinearLayout
+            android:id="@+id/piirustukset_ohjeet_linear_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp">
 
+            <SearchView
+                android:id="@+id/piirustukset_ohjeet_search_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:queryHint="@string/piirustukset_ohjeet_search_view"/>
+
+            <Button
+                android:id="@+id/piirustukset_ohjeet_search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/piirustukset_ohjeet_search_button"/>
+            <Button
+                android:id="@+id/piirustukset_ohjeet_reset_search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/piirustukset_ohjeet__reset_search_button"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <GridView
+                android:id="@+id/piirustukset_grid_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:columnWidth="90dp"
+                android:numColumns="auto_fit"
+                android:verticalSpacing="80dp"
+                android:horizontalSpacing="80dp"
+                android:stretchMode="columnWidth"
+                android:gravity="left" />
+            <GridView
+                android:id="@+id/ohjeet_grid_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:columnWidth="90dp"
+                android:numColumns="auto_fit"
+                android:verticalSpacing="80dp"
+                android:horizontalSpacing="80dp"
+                android:stretchMode="columnWidth"
+                android:gravity="right" />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
