--- a/Application/src/main/res/layout/fragment_tyomaa.xml
+++ b/Application/src/main/res/layout/fragment_tyomaa.xml
@@ -24,10 +24,15 @@
             android:queryHint="@string/tyomaa_search_view"/>
 
         <Button
-            android:id="@+id/tyomaa_button"
+            android:id="@+id/tyomaa_search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tyomaa_button"/>
+            android:text="@string/tyomaa_search_button"/>
+        <Button
+            android:id="@+id/tyomaa_reset_search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tyomaa_reset_search_button"/>
     </LinearLayout>
 
     <GridView
