--- a/Application/src/main/res/layout/explist_sisalto.xml
+++ b/Application/src/main/res/layout/explist_sisalto.xml
@@ -38,5 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/tyolista_sisalto"
-        android:id="@+id/ohj_piir_linkki" />
+        android:enabled="true"
+        android:id="@+id/ohj_piir_linkki"
+        android:onClick="onTyomaaGridSelected"
+        />
 </LinearLayout>
