--- a/Application/src/main/res/layout/fragment_tyotehtavat.xml
+++ b/Application/src/main/res/layout/fragment_tyotehtavat.xml
@@ -12,136 +12,158 @@
         android:layout_height="fill_parent"
         android:id="@+id/list_tyotehtavat"
         android:layout_weight="1"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="40dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_margin="50dp" />
 
-    <GridLayout
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        style="@style/tyolista_sisalto"
-        android:id="@+id/tyo_raportti"
-        android:layout_gravity="center"
-        android:layout_marginTop="60dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp">
+        android:background="#6699FF"
+        android:layout_gravity="center">
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        <TextView
             style="@style/tyolista_sisalto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tekijä: "
-            android:id="@+id/label_employee"
-            android:layout_row="0"
-            android:layout_column="0" />
+            android:id="@+id/tyo_raportti"
+            android:layout_gravity="center"
+            android:rowCount="5"
+            android:columnCount="3">
 
-        <TextView
-            style="@style/tyolista_sisalto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Jimi Kataja"
-            android:id="@+id/tv_employees"
-            android:layout_row="0"
-            android:layout_column="1" />
+            <TextView
+                style="@style/tyolista_sisalto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tekijä: "
+                android:id="@+id/label_employee"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_margin="20dp" />
 
-        <Button
+            <TextView
+                style="@style/tyolista_sisalto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Jimi Kataja"
+                android:id="@+id/tv_employees"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:layout_margin="20dp" />
 
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+"
-            android:id="@+id/btn_addemployee"
-            android:layout_row="0"
-            android:layout_column="2"
-            android:nestedScrollingEnabled="false" />
+            <Button
 
-        <TextView
-            style="@style/tyolista_sisalto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Aloitettu: "
-            android:id="@+id/label_start"
-            android:layout_row="1"
-            android:layout_column="0" />
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+"
+                android:id="@+id/btn_addemployee"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:nestedScrollingEnabled="false"
+                android:padding="20dp"
+                android:layout_gravity="right"
+                android:layout_margin="20dp" />
 
-        <TextView
-            style="@style/tyolista_sisalto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="aika"
-            android:id="@+id/text_start"
-            android:layout_row="1"
-            android:layout_column="1" />
+            <TextView
+                style="@style/tyolista_sisalto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Aloitettu: "
+                android:id="@+id/label_start"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_margin="20dp" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Aseta"
-            android:id="@+id/btn_setstart"
-            android:layout_row="1"
-            android:layout_column="2"
-            android:onClick="showDatePickerDialog" />
+            <TextView
+                style="@style/tyolista_sisalto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="aika"
+                android:id="@+id/text_start"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:layout_margin="20dp" />
 
-        <TextView
-            style="@style/tyolista_sisalto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Valmis: "
-            android:id="@+id/label_finish"
-            android:layout_row="2"
-            android:layout_column="0" />
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Aseta"
+                android:id="@+id/btn_setstart"
+                android:layout_row="1"
+                android:layout_column="2"
+                android:onClick="showDatePickerDialog"
+                android:padding="20dp"
+                android:layout_margin="20dp" />
 
-        <TextView
-            style="@style/tyolista_sisalto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="aika"
-            android:id="@+id/text_finish"
-            android:layout_row="2"
-            android:layout_column="1" />
+            <TextView
+                style="@style/tyolista_sisalto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Valmis: "
+                android:id="@+id/label_finish"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_margin="20dp" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Aseta"
-            android:id="@+id/btn_setfinish"
-            android:layout_row="2"
-            android:layout_column="2" />
+            <TextView
+                style="@style/tyolista_sisalto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="aika"
+                android:id="@+id/text_finish"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:layout_margin="20dp" />
 
-        <TextView
-            style="@style/tyolista_sisalto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Muuta: "
-            android:id="@+id/label_other"
-            android:layout_row="3"
-            android:layout_column="0" />
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Aseta"
+                android:id="@+id/btn_setfinish"
+                android:layout_row="2"
+                android:layout_column="2"
+                android:onClick="showDatePickerDialog"
+                android:padding="20dp"
+                android:layout_margin="20dp" />
 
-        <EditText
-            style="@style/tyolista_sisalto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textfield_other"
-            android:layout_row="3"
-            android:layout_column="1"
-            android:layout_columnSpan="1"
-            android:autoText="false"
-            android:hint="Muita huomiota" />
+            <TextView
+                style="@style/tyolista_sisalto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Muuta: "
+                android:id="@+id/label_other"
+                android:layout_row="3"
+                android:layout_column="0"
+                android:layout_margin="20dp" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tallenna"
-            android:id="@+id/btn_save"
-            android:layout_row="4"
-            android:layout_column="1"
-            android:onClick="showToast" />
-    </GridLayout>
+            <EditText
+                style="@style/tyolista_sisalto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textfield_other"
+                android:layout_row="3"
+                android:layout_column="1"
+                android:layout_columnSpan="1"
+                android:autoText="false"
+                android:singleLine="true"
+                android:imeOptions="actionDone"
+                android:maxWidth="250dp"
+                android:minWidth="200dp"
+                android:layout_margin="20dp" />
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tallenna"
+                android:id="@+id/btn_save"
+                android:layout_row="4"
+                android:layout_column="1"
+                android:onClick="showToast"
+                android:layout_marginTop="40dp"
+                android:padding="20dp" />
+        </GridLayout>
+    </FrameLayout>
 </LinearLayout>
