--- a/Application/src/main/res/values/base-strings.xml
+++ b/Application/src/main/res/values/base-strings.xml
@@ -15,7 +15,7 @@
  limitations under the License.
 -->
 <resources>
-    <string name="app_name">HorizontalPaging</string>
+    <string name="app_name">Sahkoapp</string>
     <string name="intro_message">
         <![CDATA[
         
