--- a/Application/src/main/res/layout/drawing_instruction_image.xml
+++ b/Application/src/main/res/layout/drawing_instruction_image.xml
@@ -8,7 +8,8 @@
     <ImageView
         android:id="@+id/drawing_instruction_image"
         android:layout_width="wrap_content"
-        android:layout_height="80dp" />
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"/>
 
     <TextView
         android:id="@+id/drawing_instruction_text"
