--- a/Application/src/main/res/layout/item.xml
+++ b/Application/src/main/res/layout/item.xml
@@ -27,6 +27,7 @@
             android:id="@+id/row2"
             android:layout_below="@+id/row1"
             android:textColor="#FFFFFF"
+            android:textSize="16sp"
             />
 
     </RelativeLayout>
