--- a/Application/src/main/res/layout/activity_piirustukset_ohjeet.xml
+++ b/Application/src/main/res/layout/activity_piirustukset_ohjeet.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#6699FF"
+    android:background="#2196f3"
     >
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:paddingRight="0dp"
         android:paddingLeft="0dp"
-        android:background="#6699FF">
+        android:background="#2196f3">
 
         <LinearLayout
             android:id="@+id/piirustukset_ohjeet_linear_layout"
