--- a/Application/src/main/res/layout/fragment_main_dummy.xml
+++ b/Application/src/main/res/layout/fragment_main_dummy.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#6699FF"
+    android:background="#2196f3"
     tools:context=".MainActivity$DummySectionFragment">
 
     <TextView
