--- a/Application/src/main/res/layout/fragment_piirustus_ohje.xml
+++ b/Application/src/main/res/layout/fragment_piirustus_ohje.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingRight="0dp"
     android:paddingLeft="0dp"
-    android:background="#6699FF">
+    android:background="#2196f3">
 
     <ImageView
         android:id="@+id/piirustus_ohje_image_view"
