--- a/Application/src/main/res/layout/fragment_tyomaa.xml
+++ b/Application/src/main/res/layout/fragment_tyomaa.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingRight="5dp"
     android:paddingLeft="5dp"
-    android:background="#6699FF">
+    android:background="#2196f3">
 
     <LinearLayout
         android:id="@+id/tyomaa_linear_layout"
