--- a/Application/src/main/res/layout/fragment_uutiset.xml
+++ b/Application/src/main/res/layout/fragment_uutiset.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="#6699FF">
+    android:background="#2196f3">
 
     <android.support.v7.widget.RecyclerView
         android:layout_height="match_parent"
